# cpp_projects

./: README.md
project_1/: CMakeLists.txt  Person.cpp  Person.h  Student.cpp  Student.h  main.cpp  marks.txt
project_2/: CMakeLists.txt  FirstDerivedClass.cpp  FirstDerivedClass.h  ReadFilteredWords.cpp  ReadFilteredWords.h  SecondDerivedClass.cpp  SecondDerivedClass.h  ThirdDerivedClass.cpp  ThirdDerivedClass.h  main.cpp
